style.css
@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&display=swap');

html, body {
    margin: 0;
    padding: 0;
    font-family: "Inknut Antiqua", serif;
    font-weight: 300;
    font-style: normal;
    height: 100vh;
    width: 100%;
    display: block;
    position: relative;
}

body, html, .header, header, nav, footer { 
    width: 100%;
    padding: 0;
    margin: 0;
}

.header {
    background-color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid #ddd;
    width: 100%;
    height: fit-content;
}

.header .logo {
    display: flex;
    align-items: center;
}

.header .logo img {
    height: fit-content;
    margin-right: 10px;
}

.header .contact-info {
    text-align: left;
    margin-right: 0;
}

.header .contact-info span {
    margin: 5px 0;
    font-size: 14px;
    font-weight: 800;
}

.header .contact-info p {
    margin: 5px 0;
    font-size: 13px;
}

.header .contact-info a {
    margin: 5px 0;
    font-size: 13px;
    text-decoration: none;
    color: rgb(13, 37, 177);
}

.contact-flex {
    display: flex;
}

.contact-block {
    display: block;
    padding: 10px;
    text-align: left;
} 

nav {
    background-color: #f8f8f8;
    border-top: 1px solid #ddd;
    width: 100%;
}

nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    width: 100%;
}

nav ul li {
    margin: 0 15px;
}

nav ul li a {
    text-decoration: none;
    color: #333;
    font-weight: lighter;
    padding: 10px 0;
    display: block;
    font-size: smaller;
}

nav ul li a:hover {
    color: #007BFF;
}

.inknut-antiqua-light {
    font-family: "Inknut Antiqua", serif;
    font-weight: 300;
    font-style: normal;
}

.inknut-antiqua-regular {
    font-family: "Inknut Antiqua", serif;
    font-weight: 400;
    font-style: normal;
}

.inknut-antiqua-medium {
    font-family: "Inknut Antiqua", serif;
    font-weight: 500;
    font-style: normal;
}

.inknut-antiqua-semibold {
    font-family: "Inknut Antiqua", serif;
    font-weight: 600;
    font-style: normal;
}

.inknut-antiqua-bold {
    font-family: "Inknut Antiqua", serif;
    font-weight: 700;
    font-style: normal;
}

.inknut-antiqua-extrabold {
    font-family: "Inknut Antiqua", serif;
    font-weight: 800;
    font-style: normal;
}

.inknut-antiqua-black {
    font-family: "Inknut Antiqua", serif;
    font-weight: 900;
    font-style: normal;
}

footer { 
    background-color: rgb(17, 21, 46);
    font-weight: 100;
    color: white;
    width: 100%;
    height: fit-content;
    bottom: 0;
    padding: 0;
    display: block;
    position: sticky;
    margin: 0;
}

footer p {
    font-weight: 100;
    letter-spacing: 0.2cap;
}

.footer-container {
    padding: 10px;
}

.schedule-symbol {
    padding-top: 0;
}


.background-hero {

  background-image: url("img/imagehero.jpg");
  background-repeat:no-repeat;
  background-position: center;
  background-size: cover;
  width:100%;
  display: flex;
  justify-content: left; /* Center horizontally */
  align-items: center;     /* Center vertically */
  height: 100vh;           
}

.welcome-container {
  justify-content:center;
  text-align:center;
  padding:1rem 5rem 1rem 5rem;
  position:relative;
  


}
.welcome-container p {
  font-size:20px;
  color:#2b5e94;
  font-weight:100;
}

.welcome-container h1 {
  color:#2b5e94;
  font-weight:100;


}

.herotext-container {
  justify-content:center;
  text-align:center;
  padding:1rem 5rem 1rem 5rem;
  position:center;
  width: 70%;
  align-items: center;
  background-color:#2b5e943b;
  border-radius: 0 0 0 0;



}
.herotext-container p {
  font-size:20px;
  text-align:left;
  color:white;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Schatteneffekt */
}
  


@media screen and (max-width: 800px) {
    .header {
        display: block;
        width: 100%;
    }

    .contact-block, .contact-flex {
        text-align: right;
        margin: 0;
    } 

    .contact-flex {
        text-align: right;
        margin: 0;
        display:flex;
        justify-content:right;
        
    }

    .header .contact-info span {
      margin:0;
      font-size: 12px;
      font-weight: 800;
  }
  
  .header .contact-info p {
      margin:0;
      font-size: 12px;
  }
  
  .header .contact-info a {
      margin:0;
      font-size: 12px;
      text-decoration: none;
      color: rgb(13, 37, 177);
  }

  .header .contact-icon {
    width:auto;
    min-width:20px;
    max-width:30px;
    margin:0;
    padding:0;

  }
}

